jupyterhub.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterhub
  template:
    metadata:
      labels:
        app: jupyterhub
      name: jupyterhub
    spec:
      hostname: jupyterhub-cs-aalto-fi
      containers:
      - name: jupyterhub
        image: jupyterhub-cs
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: jupyterhub-hubdata
          mountPath: /srv/jupyterhub/
        - name: jupyterhub-config
          mountPath: /srv/jupyterhub/jupyterhub_config.py
          subPath: jupyterhub_config.py
        - name: course-list
          mountPath: /courses/
        - name: adpw
          mountPath: /etc/adpw.txt
          subPath: adpw.txt
          readOnly: true
        imagePullPolicy: Never
      tolerations:
      - key: jupyterhub
        operator: Exists
        effect: NoSchedule
      volumes:
      - name: jupyterhub-hubdata
        nfs:
          server: jhnas.org.aalto.fi
          path: /vol/jupyter/admin/hubdata/
      - name: jupyterhub-config
        configMap:
          name: jupyterhub-config
      - name: course-list
        nfs:
          server: jhnas.org.aalto.fi
          path: /vol/jupyter/course/
      - name: adpw
        secret:
          secretName: adpw.txt
      nodeSelector:
        app: jupyterhub
      serviceAccountName: jupyter-notebook-spawner
