ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  annotations:
  #  nginx.ingress.kubernetes.io/secure-backends: "true"
  #  nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-body-size: 20m
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
  - hosts:
    - jupyter.cs.aalto.fi
    secretName: tls
  rules:
  - host: jupyter.cs.aalto.fi
    http:
      paths:
      - path: /
        backend:
          serviceName: jupyterhub-chp-svc
          servicePort: 80
